# overfast-api

./: .coveragerc  .env.dist  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ADAPTIVE_RATE_LIMITING.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app-start.sh  docker-compose.yml  justfile  overfast-crontab  pylintrc  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci-startup-check.yml  codeql.yml  deploy.yaml  pylint.yml  pytest.yml  release.yaml  ruff.yml  sync-upstream.yml
app/: cache_manager.py  config.py  controllers.py  decorators.py  docs.py  enums.py  exceptions.py  helpers.py  logging.py  main.py  metaclasses.py  middlewares.py  models.py  overfast_client.py  overfast_logger.py  parsers.py  unlocks_manager.py
app/api/: __init__.py  dependencies.py  docs.py  enums.py  exception_handlers.py  helpers.py  lifespan.py  middlewares.py  profiler.py  responses.py
app/commands/: check_and_delete_parser_cache.py  check_and_update_cache.py  check_new_hero.py  update_namecards_cache.py  update_search_data_cache.py  update_test_fixtures.py
app/common/: api_examples.py  cache_manager.py  decorators.py  enums.py  exceptions.py  helpers.py  logging.py  metaclasses.py  mixins.py  overfast_client.py
app/data/: gamemodes.csv  heroes.csv  heroes_stats.csv  maps.csv
app/domain/: enums.py  exceptions.py
app/gamemodes/: enums.py  models.py  router.py
app/handlers/: api_request_handler.py  get_hero_request_handler.py  get_player_career_request_handler.py  get_player_career_stats_request_handler.py  get_player_stats_summary_request_handler.py  list_gamemodes_request_handler.py  list_heroes_request_handler.py  list_maps_request_handler.py  list_roles_request_handler.py  search_players_request_handler.py
app/heroes/: enums.py  models.py  router.py
app/infrastructure/: decorators.py  helpers.py  logger.py  metaclasses.py
app/maps/: enums.py  models.py  router.py
app/models/: errors.py  gamemodes.py  heroes.py  maps.py  players.py
app/monitoring/: README.md  __init__.py  helpers.py  metrics.py  middleware.py  router.py  sentry.py
app/parsers/: abstract_parser.py  api_parser.py  gamemodes_parser.py  helpers.py  hero_parser.py  heroes_parser.py  heroes_stats_parser.py  maps_parser.py  namecard_parser.py  player_career_parser.py  player_parser.py  player_stats_summary_parser.py  roles_parser.py  search_data_parser.py
app/players/: enums.py  exceptions.py  helpers.py  models.py  router.py
app/roles/: enums.py  helpers.py  models.py  router.py
app/routers/: gamemodes.py  heroes.py  maps.py  players.py  roles.py
nginx/: nginx.conf  overfast-api.conf
overfastapi/: config.example.py  config_example.py  main.py
overfastapi/commands/: check_and_update_cache.py  check_career_pages.py  check_new_hero.py  update_test_fixtures.py
overfastapi/common/: api_examples.py  cache_manager.py  decorators.py  enums.py  exceptions.py  helpers.py  logging.py  metaclasses.py  mixins.py
overfastapi/data/: maps.csv
overfastapi/handlers/: api_request_handler.py  get_hero_request_handler.py  get_player_career_request_handler.py  get_player_stats_summary_request_handler.py  list_gamemodes_request_handler.py  list_heroes_request_handler.py  list_map_gamemodes_request_handler.py  list_maps_request_handler.py  list_roles_request_handler.py  search_players_request_handler.py
overfastapi/models/: errors.py  gamemodes.py  heroes.py  maps.py  players.py
overfastapi/parsers/: abstract_parser.py  api_parser.py  gamemodes_parser.py  helpers.py  hero_parser.py  heroes_parser.py  map_gamemodes_parser.py  maps_parser.py  player_parser.py  player_stats_summary_parser.py  roles_parser.py
overfastapi/routers/: gamemodes.py  heroes.py  maps.py  players.py  roles.py
scripts/: app-start.sh  deploy.sh  overfast-crontab
static/: overwatch-redoc.css
static/gamemodes/: assault.avif  capture-the-flag.avif  clash.avif  control.avif  deathmatch.avif  elimination.avif  escort.avif  flashpoint.avif  hybrid.avif  payload-race.avif  practice-range.avif  push.avif  team-deathmatch.avif  workshop.avif
tests/: conftest.py  fake_storage.py  helpers.py  test_api_docs.py  test_asyncio_task_queue.py  test_base_service.py  test_blizzard_throttle.py  test_cache_manager.py  test_decorators.py  test_documentation_route.py  test_helpers.py  test_player_service.py  test_postgres_storage.py  test_sqlite_storage.py  test_static_data_service.py  test_storage.py  test_update_test_fixtures.py  test_valkey_broker.py  test_valkey_task_queue.py  test_worker.py  update_test_fixtures.py
tests/commands/: test_check_and_delete_parser_cache.py  test_check_and_update_cache.py  test_check_new_hero.py  test_update_namecards_cache.py  test_update_search_data_cache.py  test_update_test_fixtures.py
tests/common/: test_cache_manager.py  test_decorators.py  test_helpers.py
tests/gamemodes/: conftest.py  test_gamemodes_route.py
tests/heroes/: conftest.py  test_hero_routes.py  test_hero_stats_route.py  test_heroes_route.py
tests/infrastructure/: conftest.py  test_helpers.py
tests/maps/: conftest.py  test_maps_route.py
tests/monitoring/: test_helpers.py  test_metrics.py  test_middleware.py  test_router.py  test_sentry.py
tests/parsers/: test_gamemodes_parser.py  test_helpers.py  test_hero_parser.py  test_heroes_parser.py  test_map_gamemodes_parser.py  test_maps_parser.py  test_namecard_parser.py  test_player_career_parser.py  test_player_parser.py  test_player_stats_summary_parser.py  test_player_summary.py  test_players_parser.py  test_roles_parser.py  test_utils.py
tests/players/: conftest.py  test_player_career_route.py  test_player_career_stats_parsers.py  test_player_profile_parsers.py  test_player_search_parsers.py  test_player_stats_route.py  test_player_stats_summary_route.py  test_player_summary_parsers.py  test_player_summary_route.py  test_player_summary_view.py  test_players_helpers.py  (+1 more)
tests/roles/: conftest.py  (+2 more)
(+400 files in other folders)
